<resources>
    <string name="LvrgnMg">Leverage &amp; Margin</string>
    <string name="MLtips">The max leverage depends on the notional value of your position.</string>
    <string name="MMRtips">Used to calculate the maintenance margin of this level.</string>
    <string name="MaxLeverage">Max Leverage</string>
    <string name="MtncMgRt">Maintenance Margin Rate</string>
    <string name="OpenOrder_text1">All Contracts</string>
    <string name="OpenOrder_text2">All Types</string>
    <string name="PBtips">Including both long and short positions.</string>
    <string name="PositionBraket">Position Bracket (Notional Value in %s)</string>
    <string name="RulesLastUpdateT">Rules Last Update Time</string>
    <string name="Tier">Tier</string>
    <string name="assets_action_search">Search</string>
    <string name="assets_action_transfer">Transfer</string>
    <string name="assets_contract_value">Equity Value</string>
    <string name="cl_all_contract">All</string>
    <string name="cl_close_1">Current contract only</string>
    <string name="cl_close_2">Close All</string>
    <string name="cl_close_3">Closing all positions close %s positions by market price and cancel all open orders,are you sure you want to close all positions?</string>
    <string name="cl_kyc_1">KYC verification</string>
    <string name="cl_kyc_2">KYC certification is required before the contract is opened, please perform certification first!\nAccording to local laws and regulations, customers in the following countries or regions are not permitted to open contract transactions：the United States, Iraq, Hong Kong China, Cuba, Iran, North Korea, Sudan, Syria, Eastern Samoa (U.S.), Puerto Rico, Guam, Bangladesh, Ecuador, China, Kyrgyzstan, Mariana Islands, United Kingdom, Canada, Macao China, Taiwan China.</string>
    <string name="cl_kyc_3">Your country/region does not support the opening of contract transactions, thank you for your support!</string>
    <string name="cl_kyc_4">During the KYC audit, the contract transaction can be opened only after the certification is successful!</string>
    <string name="cl_kyc_5">KYC certification failed, please perform certification first!</string>
    <string name="cl_kyc_6">Verify</string>
    <string name="cl_kyc_7">Unable to get user information, please try again</string>
    <string name="cl_kyc_8">KYC certification is required before trading, please perform certification first!\nAccording to local laws and regulations, customers in the following countries or regions are not permitted to open contract transactions：the United States, Iraq, Hong Kong China, Cuba, Iran, North Korea, Sudan, Syria, Eastern Samoa (U.S.), Puerto Rico, Guam, Bangladesh, Ecuador, China, Kyrgyzstan, Mariana Islands, United Kingdom, Canada, Macao China, Taiwan China.</string>
    <string name="cl_kyc_9">During the KYC audit, the contract can only be traded if the certification is successful！</string>
    <string name="cl_other_text1">Cancelled by the system</string>
    <string name="cl_other_text2">Closed by the system</string>
    <string name="cl_other_text3">Delivery</string>
    <string name="cl_replace">Market</string>
    <string name="cl_roi_1">Select Price Basis</string>
    <string name="cl_roi_2">Last Price</string>
    <string name="cl_roi_3">Mark Price</string>
    <string name="cl_roi_4">Unrealized profit &amp; loss and Return on Equity(%) are calculated based on Last Price,which may deviate from the actual profit and loss</string>
    <string name="cl_roi_5">Unrealized profit &amp; loss and Return on Equity(%) are calculated based on Mark Price,which may deviate from the actual profit and loss</string>
    <string name="cl_roi_6">PNL</string>
    <string name="cl_volume">Amount</string>
    <string name="common_share_detail">Crypto currency</string>
    <string name="common_text_priceLimit">Change</string>
    <string name="common_text_tip">Tips</string>
    <string name="common_tip_balanceNotEnough">Available balance is insufficient</string>
    <string name="common_tip_copySuccess">Successfully Copied</string>
    <string name="common_tip_networkDisconnect">Seems disconnected from the network</string>
    <string name="common_tip_networkTimeout">Request Timeout</string>
    <string name="contract_assets_account_equity">Available</string>
    <string name="contract_assets_fixMargin">Isolated balance</string>
    <string name="contract_assets_lockMargin">Frozen balance</string>
    <string name="contract_assets_margin_totalAsset">Total</string>
    <string name="contract_assets_totalMargin">Cross balance</string>
    <string name="contract_assets_wallet_balance">Wallet balance</string>
    <string name="contract_equalit_equitytips">When there is a full position loss, the available assets will be used to offset the full position loss, so the available assets and the available margin may not be consistent.</string>
    <string name="contract_swap_gift">Bonus</string>
    <string name="contract_text_btn_swapopen">Open account</string>
    <string name="contract_text_buyMarket">Buy</string>
    <string name="contract_text_openSwap_operation">Open account to trade</string>
    <string name="contract_text_sellMarket">Sell</string>
    <string name="contract_text_type">Type</string>
    <string name="cp_24amount_label">24h Vol</string>
    <string name="cp_24vol_label">24h Vol</string>
    <string name="cp_all_contract">All</string>
    <string name="cp_assets_text1">Total Balances</string>
    <string name="cp_assets_text10">Avail.</string>
    <string name="cp_assets_text2">Exchange</string>
    <string name="cp_assets_text3">Futures</string>
    <string name="cp_assets_text4">P2P</string>
    <string name="cp_assets_text5">Margin</string>
    <string name="cp_assets_text6">Security Advice</string>
    <string name="cp_assets_text7">Transfer</string>
    <string name="cp_assets_text8">Transactions</string>
    <string name="cp_assets_text9">Total Equity</string>
    <string name="cp_available_label">Available</string>
    <string name="cp_calculator_text1">Calculator</string>
    <string name="cp_calculator_text10">Amount</string>
    <string name="cp_calculator_text11">Calculate</string>
    <string name="cp_calculator_text12">Calculation Results</string>
    <string name="cp_calculator_text13">Open Margin</string>
    <string name="cp_calculator_text14">Income</string>
    <string name="cp_calculator_text15">ROI</string>
    <string name="cp_calculator_text16">Confirm</string>
    <string name="cp_calculator_text17">Calculator</string>
    <string name="cp_calculator_text18">Profit&amp;Loss</string>
    <string name="cp_calculator_text19">Close Price</string>
    <string name="cp_calculator_text2">Profit&amp;Loss</string>
    <string name="cp_calculator_text20">Liq. Price</string>
    <string name="cp_calculator_text21">Open Long</string>
    <string name="cp_calculator_text22">Open Short</string>
    <string name="cp_calculator_text23">Holding Amount Limit Position：</string>
    <string name="cp_calculator_text24">Open Price</string>
    <string name="cp_calculator_text25">ROI</string>
    <string name="cp_calculator_text26">Calculate</string>
    <string name="cp_calculator_text27">Calculation Results</string>
    <string name="cp_calculator_text28">Close Price</string>
    <string name="cp_calculator_text29">Confirm</string>
    <string name="cp_calculator_text3">Close Price</string>
    <string name="cp_calculator_text30">Calculator</string>
    <string name="cp_calculator_text31">Profit&amp;Loss</string>
    <string name="cp_calculator_text32">Close Price</string>
    <string name="cp_calculator_text33">Liq. Price</string>
    <string name="cp_calculator_text34">Open Long</string>
    <string name="cp_calculator_text35">Open Short</string>
    <string name="cp_calculator_text36">Holding Amount Limit Position：</string>
    <string name="cp_calculator_text37">Open Price</string>
    <string name="cp_calculator_text38">Position Qty.</string>
    <string name="cp_calculator_text39">Margin Amount</string>
    <string name="cp_calculator_text4">Liq. Price</string>
    <string name="cp_calculator_text40">Calculate</string>
    <string name="cp_calculator_text41">Confirm</string>
    <string name="cp_calculator_text42">In the cross mode, the leverage only affects the maximum amount that can be opened, and does not participate in the calculation of the liquidation price.</string>
    <string name="cp_calculator_text43">Available Balance</string>
    <string name="cp_calculator_text44">The available balance is not enough to open a position.</string>
    <string name="cp_calculator_text5">Open Long</string>
    <string name="cp_calculator_text6">Open Short</string>
    <string name="cp_content_text6">What are Cross and Isolated mode?</string>
    <string name="cp_contract_opened_success_msg">The contract account has been opened, and there is no fund in the current contract account. You need to make a transfer before you can trade</string>
    <string name="cp_contract_opened_successfully">Opened successfully</string>
    <string name="cp_contract_setting_text1">Cross</string>
    <string name="cp_contract_setting_text2">Isolated</string>
    <string name="cp_contract_setting_text3">Cross mode: All positions use the whole cross account balance to avoid to be liquidated.If liquidation happens,cross positions and cross balance will be lost.</string>
    <string name="cp_contract_setting_text4">Isolated mode:Some balance is allocated to the isolated account.When isolated balance is below maintenance margin, the isolated positions will be liquidated.In this mode, Margin balance can be increased or decreased.</string>
    <string name="cp_contract_setting_text7">Can not change the margin mode when positions or orders exist</string>
    <string name="cp_extra_text136">Mark Price</string>
    <string name="cp_extra_text28">I understand</string>
    <string name="cp_margin_mode">Margin Mode</string>
    <string name="cp_overview_text20">Mark Price</string>
    <string name="cp_overview_text21">Index Price</string>
    <string name="cp_overview_text56">Cancel</string>
    <string name="cp_overview_text61">Futures not open</string>
    <string name="cp_stoporder_text7">Underlying Fair Value in Spot Market</string>
    <string name="cp_stoporder_text8">Mark price is used to settle the profit and liquidate. Mark price may be offset from the market price, this prevents market manipulation</string>
    <string name="cp_tip_text15">TP/SL Risk notice</string>
    <string name="cp_tip_text16">What is a TP/SL order</string>
    <string name="cp_tip_text17">【TP/SL】 orders refer to pre-set the 【trigger price】, 【contract price】 and 【order quantity】, and the latest price reaches the trigger price, and the order will be placed at the commission price to help you preserve profits or reduce losses.</string>
    <string name="cp_tip_text18">Market slippage risk</string>
    <string name="cp_tip_text19">The transaction price of TP/SL cannot be guaranteed. It depends entirely on the market at the time. For large positions, please stop profit and stop loss in batches to avoid large slippage!</string>
    <string name="cp_tip_text20">The risk that the price cannot be traded</string>
    <string name="cp_tip_text21">Although price limit stop loss can limit price slippage, it cannot guarantee a certain transaction! When setting the order price, try to keep a reasonable distance between the trigger price and the trigger price to make the limit order easier to be traded!</string>
    <string name="cp_tip_text22">Anti-pin protection</string>
    <string name="cp_tip_text23">In order to prevent the market price transaction pin from triggering the stop loss and causing accidental injury, we have introduced a smoother marked price as the target. When the latest price deviates from the marked price too much, the stop loss will not be triggered!</string>
</resources>