<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_select_position"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/cp_bg_item_new_bottom_dialog"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_no_switch_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cp_contract_setting_text7"
            android:textColor="#FFA34F"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/tv_tab_full"
                style="@style/textStyle_text_nor_12"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_weight="1"
                android:background="@drawable/cp_btn_linear_blue_bg"
                android:text="@string/cp_contract_setting_text1"
                android:textAllCaps="false"
                android:textColor="@color/main_blue"
                android:textSize="14sp" />

            <Button
                android:id="@+id/tv_tab_gradually"
                style="@style/textStyle_text_nor_12"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_marginLeft="6dp"
                android:layout_weight="1"
                android:background="@drawable/cp_btn_linear_grey_bg"
                android:text="@string/cp_contract_setting_text2"
                android:textAllCaps="false"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_show_position_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cp_overview_text61"
                android:textColor="@color/normal_text_color"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/img_show_position_info"
                android:layout_width="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="1dp"
                android:layout_height="wrap_content"
                android:src="@drawable/contract_positions_thedropdown" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_position_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/cp_contract_setting_text3"
                android:textColor="@color/normal_text_color"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/cp_contract_setting_text4"
                android:textColor="@color/normal_text_color"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_dissmiss"
        android:layout_width="match_parent"
        android:layout_height="1000dp"
        android:background="@color/transparent"
        android:orientation="vertical" />
</LinearLayout>