<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:paddingLeft="@dimen/dp_20"
        android:paddingRight="@dimen/dp_20"
        android:background="@drawable/cp_bg_item_dialog_bg"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cp_extra_text136"
            tools:text="@string/cp_extra_text136"
            style="@style/textstyle_dm_18_bold_color1"
            android:layout_marginTop="@dimen/dp_20"
            />

        <LinearLayout
            android:id="@+id/rl_1"
            android:layout_marginTop="@dimen/dp_24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_cp_overview_text20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:lineSpacingExtra="@dimen/dp_6"
                android:text="@string/cp_overview_text20"
                style="@style/textstyle_dm_14_color1"
                />

            <TextView
                android:id="@+id/tv_tag_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="10701.1"
                android:layout_marginLeft="8dp"
                style="@style/textstyle_dm_14_color1"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_cp_stoporder_text8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/cp_stoporder_text8"
            android:layout_marginTop="8dp"
            style="@style/textstyle_dr_12_color2"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_color"
            android:layout_marginTop="@dimen/dp_12"
            />

        <LinearLayout
            android:layout_marginTop="@dimen/dp_16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_cp_overview_text21"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:lineSpacingExtra="@dimen/dp_6"
                android:text="@string/cp_overview_text21"
                style="@style/textstyle_dm_14_color1"
                />

            <TextView
                android:id="@+id/tv_index_price"
                android:layout_marginLeft="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="10701.1"
                style="@style/textstyle_dm_14_color1"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_cp_stoporder_text7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/cp_stoporder_text7"
            android:layout_marginTop="@dimen/dp_8"
            style="@style/textstyle_dr_12_color2"
            />


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_color"
            android:layout_marginTop="@dimen/dp_12"
            />

        <Button
            android:id="@+id/tv_confirm_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_44"
            android:layout_below="@+id/rl_3"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_marginBottom="@dimen/dp_20"
            android:background="@drawable/bg_select_button_blue"
            android:text="@string/cp_extra_text28"
            android:textColor="@color/white"
            android:textAllCaps="false"
            style="@style/textstyle_dm_14_color1"
            />

    </LinearLayout>
</LinearLayout>