<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/cp_bg_item_dialog_bg"
    android:padding="@dimen/dp_20"
    >

    <TextView
        android:id="@+id/tv_title"
        style="@style/textstyle_dm_18_bold_color1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cp_contract_opened_successfully"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"

        />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="@dimen/dp_140"
        android:layout_height="@dimen/dp_140"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        android:layout_marginTop="@dimen/dp_16"
        app:srcCompat="@drawable/contract_ic_opened"
        />

    <TextView
        android:id="@+id/tv_content"
        style="@style/textstyle_dr_12_color2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cp_contract_opened_success_msg"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        android:layout_marginTop="@dimen/dp_16"
        />

    <com.chainup.contract.view.CpCommonlyUsedButton
        android:id="@+id/toTransferBtn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        app:layout_constraintTop_toBottomOf="@+id/tv_content"
        android:layout_marginTop="@dimen/dp_20"
        />

    <com.chainup.contract.view.CpCommonlyUsedButton
        android:id="@+id/understandBtn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        app:bgColor="@color/card_bg_color_2"
        app:buttonTextColor="@color/text_color_1"
        app:layout_constraintTop_toBottomOf="@+id/toTransferBtn"
        android:layout_marginTop="@dimen/dp_12"
        />

    <TextView
        android:id="@+id/cancelBtn"
        style="@style/textstyle_dm_14_bold_color1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/cp_overview_text56"
        android:textColor="@color/main_color"
        android:layout_marginTop="@dimen/dp_12"
        app:layout_constraintTop_toBottomOf="@+id/understandBtn" />
</androidx.constraintlayout.widget.ConstraintLayout>